content/_assets/styles/custom.css
/* ... */
/* Glossary List */
.quire-page__content .content dl.glossary-list {
  margin-left: 0;
}
@media screen {
  .quire-page__content .content dl.glossary-list {
    line-height: 2;
  }
}
.quire-page__content .content .glossary-navigation {
  line-height: 2;
  margin-bottom: 1rem;
  text-align: center;
}
.quire-page__content .content .glossary-navigation > span {
  color: var(--lavendar)
}
.quire-page__content .content .glossary-navigation > *:not(:last-child) {
  margin-right: 1rem;
}
@media print {
  .quire-page__content .content .glossary-navigation {
    display: none;
  }
}
.quire-page__content .content dl.glossary-list dt a,
.quire-page__content .content dl.glossary-list dt a:hover {
  border-bottom-width: 0px !important;
}

/* GENERAL
============================================================================= */
/*  Progress Bar */
.quire-progress-bar {
  display: none;
}

/* Hide PDF footers */
.quire-page .pdf-footers__title {
  display: none;
}

/* Remove custom list markers */
.quire-page__content .container .content ul {
  list-style: initial;
}
.quire-page__content .container .content ul li::before {
  content: none;
}
/* Adjust various list margins */
.content ul {
  margin-left: 1.5rem;
}
.quire-page__content .container .content li ul li {
  margin-bottom: .5em;
}
.quire-page__content .container .content ul.quire-contributors-list {
  list-style-type: none;
}

/* Fix for empty content areas that otherwise show up white */
nav.table-of-contents.menu-list + .content {
  background-color: transparent;
}

/* Figures
============================================================================= */
/* Color the manually added figure labels in group captions */
.q-figure__caption-content > strong:first-child {
  color: var(--accent-color);
}

/* COVER
============================================================================= */
/* Cover Background Image */
.quire-cover__overlay {
  background-position-y: 80%;
}
/* Cover Title Area */
.hero-body .container.is-fluid {
  background: transparent;
  left: auto;
  margin-right: 0;
  padding-left: 30px;
  padding-right: 60px;
  padding-top: 0;
  right: 0;
}
/* Cover Title */
.quire-cover__hero .title {
  color: var(--bright-orange);
  font-size: 5rem;
}
/* Cover Contributor */
.quire-cover__hero .contributor {
  font-size: 1.2rem;
  text-align: right;
  text-transform: uppercase;
}
.quire-cover__hero .contributor em {
  font-style: normal;
}
/* Cover More Arrow */
.quire-cover__more .hero-more {
  background: var(--bright-orange);
}
.quire-cover__more .hero-more svg {
  fill: var(--dark-brown);
}
/* Cover Page Background */
.quire:not(.no-js) .quire__primary main.quire-cover {
  background-color: var(--dark-brown);
}
/* Cover Descriptive Text */
.quire-cover .quire-page__content .container.is-fluid .content {
  background-color: transparent;
  color: var(--white);
  font-size: 1.1em;
}


/* NAVBAR
============================================================================= */
/* Fix display of nav labels */
.quire-navbar-page-controls__item.quire-next-page a,
.quire-navbar-page-controls__item.quire-previous-page a {
  white-space: nowrap;
  max-width: calc((100vw - 18rem) * .5);
}
@media screen and (max-width: 900px) {
  span.nav-label {
    display: none !important;
  }
}

/* MENU
============================================================================= */
/* Make key menu items white */
/* Book Title */
.quire-menu__header h4.quire-menu__header__title {
  color: var(--white);
  font-size: 1.7rem;
}
/* Current Page */
.quire-menu .page-item a.active,
.quire-menu .section-item a.active,
.quire-menu .page-item .page-item a.active,
.quire-menu .section-item .page-item a.active,
.quire-menu .page-item a.active *,
.quire-menu .section-item a.active * {
  border-left-color: var(--white) !important;
  color: var(--white) !important;
}
/* Headings for Downloads and Citations */
.quire-menu__formats h6 {
  border-bottom-color: var(--white);
  color: var(--white);
}

/* TABLES
============================================================================= */
/* Style tables as they appear on the page */
.q-figure.q-figure--table {
  border-width: 0;
  padding: 0;
}
.quire-page__content .container .content table,
.quire-page__content .container .content table th,
.quire-page__content .container .content table td {
  border: 1px solid var(--dark-brown);
  border-collapse: collapse;
}
.quire-page__content .container .content table {
  margin: 0;
  line-height: 1.5;
  text-align: left;
}
.quire-page__content .container .content table caption {
  font-size: 1rem;
  margin-bottom: 1rem;
  margin-left: 0;
  text-align: left;
}
.quire-page__content .container .content table p {
  margin-bottom: .25em;
  line-height: 1.5;
}
.quire-page__content .container .content table ul {
  list-style: initial;
  padding-left: 0;
  margin-left: .5em;
  margin-top: 0;
  margin-bottom: .5em;
}
.quire-page__content .container .content table ol {
  padding-left: 0;
  margin-left: 3em;
  margin-top: 0;
  margin-bottom: .5em;
}
.quire-page__content .container .content table ul li,
.quire-page__content .container .content table ol li {
  margin-bottom: 0;
}
.quire-page__content .container .content table ul li::before {
  content: none;
}
.quire-page__content .content .table-key {
  margin-top: 0.5rem;
  font-size: 0.75rem;
  line-height: 1.6;
  text-align: left;
}
.quire-page__content .container .content .table-key p,
.quire-page__content .container .content .table-key ul {
  margin-bottom: 0.25rem !important;
}
table a,
.table-key a {
  color: inherit;
  border-bottom: 1px dotted var(--accent-color);
}
/* Fix an issue caused by too generalized selector for img elements */
.q-lightbox-slides__element table img {
  position: initial;
  transform: none;
}
/* Add some margin in cases where a table figure contains multiple tables */
.quire-page__content .container .content table + table,
.q-lightbox-slides__element--table table + table {
  margin-top: 1rem;
}
/* ... */

